[gd_scene load_steps=6 format=3 uid="uid://dqbwmrbm0pqlk"]

[ext_resource type="Texture2D" uid="uid://br8hxq4j4efac" path="res://Assets/Menu/Botón sin puchar (1).png" id="1_lcb5x"]
[ext_resource type="Script" path="res://Scripts/Menus/PauseGame.gd" id="1_xe43x"]
[ext_resource type="Texture2D" uid="uid://n7whworx25bf" path="res://Assets/Menu/Botón puchado.png" id="2_kt1qn"]
[ext_resource type="PackedScene" uid="uid://d0x6q5ooccs3h" path="res://Escenas/Assets/Interfaces/OpcionsMenuVolumen.tscn" id="4_eoare"]
[ext_resource type="Script" path="res://Scripts/Menus/Hora.gd" id="5_hw5s8"]

[node name="Pausa" type="Control"]
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_xe43x")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
z_index = 91
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -260.0
offset_right = 396.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="Opciones" type="VBoxContainer" parent="UI/Panel"]
z_index = 92
layout_direction = 1
layout_mode = 0
offset_left = 21.0
offset_top = 64.0
offset_right = 1045.0
offset_bottom = 2016.0
scale = Vector2(0.25, 0.25)
theme_override_constants/separation = 11

[node name="Personajes" type="TextureButton" parent="UI/Panel/Opciones"]
z_index = 92
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
texture_normal = ExtResource("1_lcb5x")
texture_pressed = ExtResource("2_kt1qn")
texture_disabled = ExtResource("2_kt1qn")

[node name="Label" type="Label" parent="UI/Panel/Opciones/Personajes"]
layout_mode = 0
offset_left = 56.0
offset_right = 689.0
offset_bottom = 181.0
scale = Vector2(1.12068, 1.25487)
theme_override_font_sizes/font_size = 124
text = "Personaje"

[node name="Objetos" type="TextureButton" parent="UI/Panel/Opciones"]
z_index = 92
layout_mode = 2
size_flags_vertical = 2
texture_normal = ExtResource("1_lcb5x")
texture_pressed = ExtResource("2_kt1qn")
texture_disabled = ExtResource("2_kt1qn")

[node name="Label" type="Label" parent="UI/Panel/Opciones/Objetos"]
layout_mode = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 526.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 124
text = "Objetos"

[node name="Opciones" type="TextureButton" parent="UI/Panel/Opciones"]
z_index = 92
layout_mode = 2
size_flags_vertical = 2
texture_normal = ExtResource("1_lcb5x")
texture_pressed = ExtResource("2_kt1qn")
texture_disabled = ExtResource("2_kt1qn")

[node name="Label" type="Label" parent="UI/Panel/Opciones/Opciones"]
layout_mode = 0
offset_left = 56.0
offset_top = 35.0
offset_right = 613.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 124
text = "Opciones"

[node name="Guardar partida" type="TextureButton" parent="UI/Panel/Opciones"]
z_index = 92
layout_mode = 2
size_flags_vertical = 2
texture_normal = ExtResource("1_lcb5x")
texture_pressed = ExtResource("2_kt1qn")
texture_disabled = ExtResource("2_kt1qn")

[node name="Label" type="Label" parent="UI/Panel/Opciones/Guardar partida"]
layout_mode = 0
offset_left = 60.0
offset_top = 56.0
offset_right = 994.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 110
text = "Guardar Partida"

[node name="PanelContainer" type="PanelContainer" parent="UI/Panel"]
layout_mode = 0
offset_left = 328.0
offset_top = 16.0
offset_right = 760.0
offset_bottom = 504.0

[node name="Personajes" type="Panel" parent="UI/Panel/PanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/PanelContainer/Personajes"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "En desarrollo"

[node name="Objetos" type="Panel" parent="UI/Panel/PanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/PanelContainer/Objetos"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "En desarrollo"

[node name="Opciones" type="Panel" parent="UI/Panel/PanelContainer"]
visible = false
layout_mode = 2

[node name="Volumen" parent="UI/Panel/PanelContainer/Opciones" instance=ExtResource("4_eoare")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -20.0
offset_top = -2.0
offset_right = 412.0
offset_bottom = 486.0
scale = Vector2(1.5, 1.5)

[node name="GuardarPartida" type="Panel" parent="UI/Panel/PanelContainer"]
visible = false
layout_mode = 2

[node name="Hora" type="Label" parent="UI/Panel"]
z_index = 111
layout_mode = 0
offset_left = 24.0
offset_top = 9.0
offset_right = 64.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 32
script = ExtResource("5_hw5s8")

[connection signal="pressed" from="UI/Panel/Opciones/Personajes" to="." method="_on_personajes_pressed"]
[connection signal="pressed" from="UI/Panel/Opciones/Objetos" to="." method="_on_objetos_pressed"]
[connection signal="pressed" from="UI/Panel/Opciones/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="UI/Panel/Opciones/Guardar partida" to="." method="_on_guardar_partida_pressed"]
